--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,13 +9,19 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
     <style>
 
-*{
-       margin: 0;
-       padding: 0;
 
+* {
+
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
+font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
 
