--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -20,8 +19,15 @@
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
-font-family: 'Roboto', sans-serif;
-    box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
+}
+
+.link{
+
+  text-decoration: none;
+  color:inherit;
+
 }
 
 
